--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi==0.115.6",
+    "gdown>=5.2.0",
+    "hydra-core>=1.3.2",
+    "matplotlib>=3.10.8",
     "torch==2.6.0",
+    "tqdm>=4.67.1",
     "typer==0.15.1",
     "uvicorn==0.34.0",
 ]
