--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,15 @@ dependencies = [
     "gdown>=5.2.0",
     "hydra-core>=1.3.2",
     "matplotlib>=3.10.8",
+    "pytorch-lightning>=2.6.0",
+    "snakeviz>=2.2.2",
     "torch==2.6.0",
+    "torch-tb-profiler>=0.4.3",
     "torchvision>=0.21.0",
     "tqdm>=4.67.1",
     "typer==0.15.1",
     "uvicorn==0.34.0",
+    "wandb>=0.23.1",
 ]
 
 [dependency-groups]
