--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,11 @@ dependencies = [
     "fastapi==0.115.6",
     "gdown>=5.2.0",
     "hydra-core>=1.3.2",
+    "loguru>=0.7.3",
     "matplotlib>=3.10.8",
+    "python-dotenv>=1.2.1",
     "pytorch-lightning>=2.6.0",
+    "scikit-learn>=1.8.0",
     "snakeviz>=2.2.2",
     "torch==2.6.0",
     "torch-tb-profiler>=0.4.3",
