--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -11,9 +11,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
     matrix:
-      os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-      python-version: ["3.10", "3.11"]
-    steps:
+      os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+      python-version: ["3.10", "3.11", "3.12"]
+
+  steps:
     - name: Checkout
       uses: actions/checkout@v5
 
