--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "click>=8.3.1",
     "fastapi==0.115.6",
     "gdown>=5.2.0",
     "hydra-core>=1.3.2",
@@ -67,3 +68,7 @@ line-length = 120
 
 [tool.coverage.run]
 omit = ["tests/*"]
+
+[project.scripts]
+train = "mlops.train:app"
+evaluate = "mlops.evaluate:app"
