--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,14 +24,17 @@ dependencies = [
     "hydra-core>=1.3.2",
     "loguru>=0.7.3",
     "matplotlib>=3.10.8",
+    "opencv-python>=4.12.0.88",
     "python-dotenv>=1.2.1",
     "pytorch-lightning>=2.6.0",
+    "requests>=2.32.5",
     "scikit-learn>=1.8.0",
     "snakeviz>=2.2.2",
     "torch==2.6.0",
     "torch-tb-profiler>=0.4.3",
     "torchvision>=0.21.0",
     "tqdm>=4.67.1",
+    "transformers>=4.57.5",
     "typer==0.15.1",
     "uvicorn==0.34.0",
     "wandb>=0.23.1",
